--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>tn.esprit.spring</groupId>
-	<artifactId>Timesheet-spring-boot-core-data-jpa-mvc-REST-1</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>Timesheet-spring-boot-core-data-jpa-mvc-REST-1</name>
-	<description>Timesheet-spring-boot-core-data-jpa-mvc-REST-1</description>
+	<artifactId>Timesheet-IC-dev-team</artifactId>
+	<version>1.0</version>
+
+	<name>Timesheet-IC-dev-team</name>
+	<description>Timesheet-IC-dev-team</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -66,6 +66,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
 		</plugins>
 	</build>
 
