--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,13 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>tn.esprit.spring</groupId>
-	<artifactId>Timesheet-IC-dev-team</artifactId>
+	<artifactId>Timesheet</artifactId>
 	<version>1.0</version>
+	
+	<packaging>jar</packaging>
 
-	<name>Timesheet-IC-dev-team</name>
-	<description>Timesheet-IC-dev-team</description>
+	<name>Timesheet</name>
+	<description>Timesheet</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -57,6 +59,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		
@@ -68,7 +76,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
 		</plugins>
 	</build>
 
